; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-aes.c_atmel_aes_unregister_algs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_atmel-aes.c_atmel_aes_unregister_algs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atmel_aes_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64, i64 }

@aes_xts_alg = common dso_local global i32 0, align 4
@aes_gcm_alg = common dso_local global i32 0, align 4
@aes_cfb64_alg = common dso_local global i32 0, align 4
@aes_algs = common dso_local global i32* null, align 8
@aes_authenc_algs = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atmel_aes_dev*)* @atmel_aes_unregister_algs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @atmel_aes_unregister_algs(%struct.atmel_aes_dev* %0) #0 {
  %2 = alloca %struct.atmel_aes_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.atmel_aes_dev* %0, %struct.atmel_aes_dev** %2, align 8
  %4 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %2, align 8
  %5 = getelementptr inbounds %struct.atmel_aes_dev, %struct.atmel_aes_dev* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @crypto_unregister_alg(i32* @aes_xts_alg)
  br label %11

11:                                               ; preds = %9, %1
  %12 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %2, align 8
  %13 = getelementptr inbounds %struct.atmel_aes_dev, %struct.atmel_aes_dev* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = call i32 @crypto_unregister_aead(i32* @aes_gcm_alg)
  br label %19

19:                                               ; preds = %17, %11
  %20 = load %struct.atmel_aes_dev*, %struct.atmel_aes_dev** %2, align 8
  %21 = getelementptr inbounds %struct.atmel_aes_dev, %struct.atmel_aes_dev* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = call i32 @crypto_unregister_alg(i32* @aes_cfb64_alg)
  br label %27

27:                                               ; preds = %25, %19
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %39, %27
  %29 = load i32, i32* %3, align 4
  %30 = load i32*, i32** @aes_algs, align 8
  %31 = call i32 @ARRAY_SIZE(i32* %30)
  %32 = icmp slt i32 %29, %31
  br i1 %32, label %33, label %42

33:                                               ; preds = %28
  %34 = load i32*, i32** @aes_algs, align 8
  %35 = load i32, i32* %3, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  %38 = call i32 @crypto_unregister_alg(i32* %37)
  br label %39

39:                                               ; preds = %33
  %40 = load i32, i32* %3, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %3, align 4
  br label %28

42:                                               ; preds = %28
  ret void
}

declare dso_local i32 @crypto_unregister_alg(i32*) #1

declare dso_local i32 @crypto_unregister_aead(i32*) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
